# memex-agent

./: .gitignore  .gitmodules  CLAUDE.md  README-TESTING.md  README.md  TESTING.md  TESTING_GUIDE.md  WHISPER_INTEGRATION.md  build.gradle.kts  download-whisper-model.ps1  download-wrapper.ps1  gradle.properties  settings.gradle.kts  test-all.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/memexos/app/: MainActivityTest.kt  RecordingFlowTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/example/memexos/: ModelUtils.java  WhisperTestActivity.java  WhisperWrapper.java
app/src/main/java/com/memexagent/app/: MainActivity.kt  VoiceAgentCoordinator.kt  VoiceAgentTest.kt
app/src/main/java/com/memexagent/app/actions/: BrowserActionController.kt
app/src/main/java/com/memexagent/app/ai/: ContextualAI.kt
app/src/main/java/com/memexagent/app/audio/: AudioRecorder.kt  WaveFileEncoder.kt
app/src/main/java/com/memexagent/app/commands/: VoiceCommandProcessor.kt
app/src/main/java/com/memexagent/app/context/: ScreenContextManager.kt  VisualContextProcessor.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  waveform_background.xml
app/src/main/res/layout/: activity_main.xml  dialog_recording.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/testShared/java/com/memexos/app/: AssetTestHelper.kt  MockWebServerRule.kt  TestCoroutineRule.kt
benchmark/: build.gradle.kts
benchmark/src/main/java/com/memexos/benchmark/: AudioRecordingBenchmark.kt  StartupBenchmark.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidTestConventionPlugin.kt  PerformanceTestConventionPlugin.kt  StaticAnalysisConventionPlugin.kt
config/detekt/: detekt.yml
(+5 files in other folders)
